# SpenceDewV2

./: .gitignore  CMakeLists.txt  MVP_Plan.md  MapDesignPlan.md  NPC_Dialogue_Guide.md  README.md  build-and-run.bat  build-and-run.ps1
.devcontainer/: Dockerfile  devcontainer.json
assets/dialogue/: willow.json
assets/levels/: level_01.ldtk
assets/sprites/: Player.json  character-spritesheet.json  credits.csv
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SpenceDew.sln  SpenceDew.vcxproj  SpenceDew.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-win/SpenceDew.dir/Debug/: SpenceDew.exe.recipe  SpenceDew.ilk
build-win/SpenceDew.dir/Debug/SpenceDew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  SpenceDew.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  (+1 more)
src/: main.cpp
src/core/: Input.h
src/core/animation/: AnimatedSprite.cpp  AnimatedSprite.h
src/core/entities/: NPC.cpp  NPC.h
src/core/entities/enemies/: Enemy.cpp  Enemy.h
src/core/entities/friends/: Friend.cpp  Friend.h  PotentialPartner.cpp  PotentialPartner.h
src/core/entities/player/: Player.cpp  Player.h
src/core/systems/combat/: Hitbox.h  Hurtbox.h  Projectile.h
src/core/systems/dialogue/: Dialogue.cpp  Dialogue.h  DialogueRunner.cpp  DialogueRunner.h
src/core/systems/farming/: FarmController.cpp  FarmController.h
src/core/systems/navigation/: Pathfinder.cpp  Pathfinder.h
src/core/systems/relationships/: RelationshipManager.cpp  RelationshipManager.h
src/core/systems/tilemap/: LdtkLoader.cpp  LdtkLoader.h  Tilemap.h
src/core/systems/ui/: DamageNumbers.h  DialogueUI.h
(+19 files in other folders)
